@@ -382,6 +382,8 @@ COB_HIDDEN void		cob_init_move		(cob_global *, cob_settings *);
 COB_HIDDEN void		cob_init_screenio	(cob_global *, cob_settings *);
 COB_HIDDEN void		cob_init_mlio		(cob_global * const);
 
+COB_HIDDEN void		cob_print_field		(FILE *, cob_field *, int, int);
+
 COB_HIDDEN void		cob_fork_fileio		(cob_global *, cob_settings *);
 
 COB_HIDDEN void		cob_exit_screen		(void);
