@@ -3549,6 +3549,7 @@ AT_DATA([callee.cob], [
 ])
 
 AT_DATA([caller.c], [[
+#include <stdio.h>
 #include <libcob.h>
 
 int callee (char *, char *);
@@ -3612,6 +3613,7 @@ AT_DATA([callee.cob], [
 ])
 
 AT_DATA([caller.c], [[
+#include <stdio.h>
 #include <libcob.h>
 
 int callee (char *, char *);
@@ -3688,6 +3690,7 @@ AT_DATA([prog.cob], [
 ])
 
 AT_DATA([cprog.c], [[
+#include <stdio.h>
 #include <libcob.h>
 
 COB_EXT_EXPORT int
@@ -3755,6 +3758,7 @@ AT_DATA([prog.cob], [
 ])
 
 AT_DATA([cprog.c], [[
+#include <stdio.h>
 #include <libcob.h>
 
 COB_EXT_EXPORT int
@@ -7350,6 +7354,7 @@ AT_DATA([cmod.c], [[
 #include <string.h>
 #include <stdlib.h>
 #include <libcob.h>
+#include <stdio.h>
 
 #ifndef TRUE
 #define TRUE 1
